--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass-watch": "sass --watch ." // для сборки css из scss пишем команду npm run sass-watch
+    "sass-watch": "sass --watch ."
   },
   "keywords": [],
   "author": "",
